--- a/first.html
+++ b/first.html
@@ -9,24 +9,7 @@
   <body>
     <!-- PARAGRAPH TAG HERE -->
 
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi
-      doloremque totam odio similique odit! Explicabo reprehenderit voluptas
-      quo, saepe itaque, asperiores aspernatur architecto neque excepturi
-      officiis magnam quam dolore laboriosam.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi
-      doloremque totam odio similique odit! Explicabo reprehenderit voluptas
-      quo, saepe itaque, asperiores aspernatur architecto neque excepturi
-      officiis magnam quam dolore laboriosam.
-    </p>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam,
-      praesentium voluptates. Ratione ad obcaecati reprehenderit quibusdam
-      perferendis pariatur itaque harum? Doloremque tenetur eius fugit molestias
-      nisi corrupti porro perferendis odit?
-    </p>
+    <p>This is paragraph tag . the pragraph tag is use in pragraph write</p>
 
     <!-- PARAGRAPH TAG CLOSE -->
 
@@ -57,5 +40,109 @@
     <p>This is Normal Text <small>this is small tag</small></p>
 
     <!-- SMALL TAG CLOSE -->
+
+    <!-- UNORDERED LIST HERE -->
+
+    <ul>
+      <!-- LIST ITEM HERE  -->
+      <li>UNORDERED LIST: Shohag</li>
+      <li>UNORDERED LIST: Mowsumi</li>
+      <li>UNORDERED LIST: Sumon</li>
+      <li>UNORDERED LIST: Rohul</li>
+      <li>UNORDERED LIST: Bappy</li>
+      <!-- LIST ITEM CLOSE  -->
+    </ul>
+
+    <!-- UNORDERED LIST CLOSE -->
+
+    <!-- ORDERED LIST HERE -->
+
+    <ol>
+      <!-- LIST ITEM HERE  -->
+      <li>ORDERED LIST: Shohag</li>
+      <li>ORDERED LIST: Mowsumi</li>
+      <li>ORDERED LIST: Sumon</li>
+      <li>ORDERED LIST: Rohul</li>
+      <li>ORDERED LIST: Bappy</li>
+      <!-- LIST ITEM CLOSE  -->
+    </ol>
+
+    <!-- ORDERED LIST CLOSE -->
+
+    <!-- ORDERED LIST HERE -->
+
+    <dl>
+      <dt>DESCRIPTION LIST: Shohag</dt>
+      <dd>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae quas
+        facere debitis at hic delectus obcaecati eum cumque quis odit rerum,
+        similique dolorem consectetur ipsa minus sunt quia possimus culpa!
+      </dd>
+      <dt>DESCRIPTION LIST: mowsumi</dt>
+      <dd>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae quas
+        facere debitis at hic delectus obcaecati eum cumque quis odit rerum,
+        similique dolorem consectetur ipsa minus sunt quia possimus culpa! Lorem
+        ipsum dolor sit, amet consectetur adipisicing elit. Molestiae quas
+        facere debitis at hic delectus obcaecati eum cumque quis odit rerum,
+        similique dolorem consectetur ipsa minus sunt quia possimus culpa!
+      </dd>
+      <dt>DESCRIPTION LIST: Sumon</dt>
+      <dd>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae quas
+        facere debitis at hic delectus obcaecati eum cumque quis odit rerum,
+        similique dolorem consectetur ipsa minus sunt quia possimus culpa!
+      </dd>
+    </dl>
+
+    <!-- ORDERED LIST CLOSE -->
+
+    <!-- DIVITION TAG HERE -->
+
+    <div>
+      <h4>This is Heading</h4>
+      <p>This is paragraph tag . I'm pragraph on div tag</p>
+    </div>
+
+    <!-- DIVITION TAG CLOSE -->
+
+    <!-- BREAK TAG HERE -->
+
+    <p>
+      Lorem ipsum dolor, sit amet consectetur <br />
+      adipisicing elit. Natus repellendus aliquid, rem qui tenetur tempore
+      nostrum quos! Nemo ducimus quae cum, nobis vel quos cumque reiciendis ipsa
+      iste dolores deserunt.
+    </p>
+
+    <!-- BREAK TAG CLOSE -->
+
+    <!-- BUTTON TAG HERE -->
+
+    <button>CLICK ME</button>
+
+    <!-- BUTTON TAG CLOSE -->
+
+    <!-- ANCHOR TAG HERE -->
+    <br />
+    <br />
+
+    <a href="https://mdshohaghossen-sm29.netlify.app/" target="_blank"
+      >Go To My Portflio</a
+    >
+
+    <br />
+    <br />
+
+    <a href="image.html">Go To Image Page</a>
+
+    <br />
+    <br />
+
+    <a href="input.html">Go To Input Page</a>
+
+    <br />
+    <br />
+    <!-- ANCHOR TAG CLOSE -->
   </body>
 </html>
