--- a/first.html
+++ b/first.html
@@ -143,6 +143,11 @@
 
     <br />
     <br />
+
+    <a href="form.html">Go To Form Page</a>
+
+    <br />
+    <br />
     <!-- ANCHOR TAG CLOSE -->
   </body>
 </html>
